feat: implements  test Users
