# src/favorites/entities/favorite.entity.ts
@@ -1,1 +1,11 @@
-export class Favorite {}
+export class Track {
+  id: string; // uuid v4
+  name: string;
+  artistId: string | null; // refers to Artist
+  albumId: string | null; // refers to Album
+  duration: number; // integer number
+
+  constructor(trackData: Track) {
+    Object.assign(this, trackData);
+  }
+}
