# src/users/dto/update-password.ts
@@ -1,11 +1,10 @@
 import { IsNotEmpty, IsString } from 'class-validator';
-
-export class CreateUserDto {
+export class UpdatePasswordDto {
   @IsNotEmpty()
   @IsString()
-  login: string;
+  oldPassword: string;
 
   @IsNotEmpty()
   @IsString()
-  password: string;
+  newPassword: string;
 }
