# src/users/entities/user.entity.ts
@@ -1,1 +1,16 @@
-export class User {}
+import { Exclude } from 'class-transformer';
+
+export class User {
+  id: string;
+  login: string;
+  version: number;
+  createdAt: number;
+  updatedAt: number;
+
+  @Exclude()
+  password: string;
+
+  constructor(partial: Partial<User>) {
+    Object.assign(this, partial);
+  }
+}
